--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Giang's CV</title>
-  <!-- Load font awesome -->
   <link rel="stylesheet" href="assets/vendors/font-awesome-4.7.0/css/font-awesome.min.css">
-
-  <!-- Load google font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-
-  <!-- Load main stylesheet -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,9 +12,25 @@
     <div class="sidebar">
       <div class="avatar">
         <img src="assets/img/avatar.JPG" width="215" height="215" alt="Mai Truong Giang" />
-        <h1 class="name">Mai Truong Giang</h1>
-        <h4 class="job">Ruby Developer</h4>
-      </div><!-- .avatar -->
+        <h1 class="full-name">Mai Truong Giang</h1>
+        <h4 class="job-title">Web Developer</h4>
+        <div class="social-link">
+          <ul class="social-profiles invert">
+            <li class="item"><a href="https://github.com/giangmt">
+              <i class="fa fa-github circle circle--small circle--white"></i>
+            </a></li>
+            <li class="item"><a href="#">
+              <i class="fa fa-facebook-official circle circle--small circle--white"></i>
+            </a></li>
+            <li class="item"><a href="https://twitter.com/matnotes">
+              <i class="fa fa-twitter circle circle--small circle--white"></i>
+            </a></li>
+            <li class="item"><a href="https://viblo.asia/u/giangmt">
+              <i class="fa fa-external-link circle circle--small circle--white"></i>
+            </a></li>
+          </ul>
+        </div>
+      </div>
 
       <div class="module">
         <h3 class="module__title">
@@ -27,10 +38,9 @@
           <span>About Me</span>
         </h3>
         <div class="module__content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p>I'm Mai Truong Giang, a web developer with <strong>1 years of experience in Ruby programming</strong> and <strong>1 years of experience in Rails framework.</strong></p>
         </div>
-      </div><!-- End .module #1 -->
+      </div>
 
       <div class="module">
         <h3 class="module__title">
@@ -41,19 +51,19 @@
           <ul>
             <li class="flex">
               <i class="fa fa-map-marker circle circle--small circle--white"></i>
-              <div>Valley Obstetrics & Gynecology 585 North 500 West</div>
+              <div>57/2 Dai Tu, Hoang Mai, Ha Noi</div>
             </li>
             <li class="flex">
-              <i class="fa fa-globe circle circle--small circle--white"></i>
-              <div>giangmt.github.io<br>giangrbr@gmail.com</div>
+              <i class="fa fa-envelope circle circle--small circle--white"></i>
+              <div>giangrbr@gmail.com</div>
             </li>
             <li class="flex">
               <i class="fa fa-mobile circle circle--small circle--white"></i>
-              <div>(801) 374-1801, (801) 374-1800<br>(801) 374-1803</div>
+              <div>(0169) 399-5313</div>
             </li>
           </ul>
         </div>
-      </div><!-- End .module #2 -->
+      </div>
 
       <div class="module module--progress">
         <h3 class="module__title">
@@ -63,45 +73,31 @@
         <div class="module__content">
           <ul>
             <li class="flex">
-              <i class="fa fa-paint-brush circle circle--small circle--white"></i>
-              <div class="flex--1">
-                <span>Adobe Photoshop</span>
-                <span class="progress-bar"><span style="width:90%"></span></span>
-              </div>
-            </li>
-            <li class="flex">
               <i class="fa fa-html5 circle circle--small circle--white"></i>
               <div class="flex--1">
                 <span>HTML / CSS / JS</span>
-                <span class="progress-bar"><span style="width:95%"></span></span>
+                <span class="progress-bar"><span style="width:60%"></span></span>
               </div>
             </li>
             <li class="flex">
-              <i class="fa fa-android circle circle--small circle--white"></i>
+              <i class="fa fa-road circle circle--small circle--white"></i>
               <div class="flex--1">
-                <span>Android Development</span>
-                <span class="progress-bar"><span style="width:80%"></span></span>
+                <span>Ruby on Rails</span>
+                <span class="progress-bar"><span style="width:65%"></span></span>
               </div>
             </li>
             <li class="flex">
-              <i class="fa fa-globe circle circle--small circle--white"></i>
+              <i class="fa fa-github circle circle--small circle--white"></i>
               <div class="flex--1">
-                <span>Web Design</span>
-                <span class="progress-bar"><span style="width:85%"></span></span>
-              </div>
-            </li>
-            <li class="flex">
-              <i class="fa fa-print circle circle--small circle--white"></i>
-              <div class="flex--1">
-                <span>Print Design</span>
-                <span class="progress-bar"><span style="width:70%"></span></span>
+                <span>Git</span>
+                <span class="progress-bar"><span style="width:50%"></span></span>
               </div>
             </li>
           </ul>
         </div>
-      </div><!-- End .module #3 -->
+      </div>
       
-    </div><!-- End .sidebar -->
+    </div>
     <div class="content">
       <div class="section">
         <h2 class="section__title">
@@ -110,111 +106,126 @@
         </h2>
         <div class="section__content">
           <div class="module">
-            <h3 class="module__title">Creative Designer</h3>
+            <h3 class="module__title">Web Developer</h3>
             <div class="module__meta">
-              <span><i class="fa fa-building-o"></i>Google Inc USA</span>
-              <span><i class="fa fa-calendar"></i>20 Sep 2010-Current</span>
+              <span><i class="fa fa-building-o"></i>Framgia Awesome Academy</span>
+              <span><i class="fa fa-calendar"></i>29/11/2017 - Present</span>
             </div>
             <div class="module__content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <ul>
+                <li><span class="bold">Project</span>: Book Reviewing System</li>
+                <li><span class="bold">Project Description</span>: A web app delivering Lancaster University services, resources, and information - at your fingertips - whenever you want them, from wherever you are!</li>
+                <li><span class="bold">Team Size</span>: 3</li>
+                <li><span class="bold">Responsiblities</span>:
+                  <p>Work directly with development manager and customer to define, clarify requirement.</p>
+                  <p>Develop new features and maintain existing features.</p>
+                  <p>Responsible for quality of product, quality of code by running reviews, unit test…</p>
+                  <p>Daily meeting for reporting and escalating issues/risks..</p>
+                </li>
+                <li><span class="bold">Accomplishments</span>: Learned new Microsoft technologies and frameworks. Improved teamwork and communication skills.</li>
+                <li><span class="bold">Technologies</span>: RESTful, AJAX, JQuery, Ruby, Rails Framework.</li>
+              </ul>
             </div>
-          </div><!-- End .module #4 -->
-
+          </div>
+        </div>
+        <div class="section__content">
           <div class="module">
-            <h3 class="module__title">Android Developer</h3>
+            <h3 class="module__title">My Project</h3>
             <div class="module__meta">
-              <span><i class="fa fa-building-o"></i>Google Inc USA</span>
-              <span><i class="fa fa-calendar"></i>20 Sep 2010-Current</span>
+              <ul>
+                <li><span><i class="fa fa-building-o"></i>Department of Software Engineering (DSE), HUST</span></li>
+                <li><span><i class="fa fa-calendar"></i>25/12/2017 - 11/03/2018</span></li>
+              </ul>
             </div>
             <div class="module__content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <ul>
+                <li><span class="bold">Project</span>: Blood Management System</li>
+                <li><span class="bold">Project Description</span>: A web app delivering HUST services, resources, and information - at your fingertips - whenever you want them, from wherever you are!</li>
+                <li><span class="bold">Responsiblities</span>: Meeting with customers and teammates to get clear requirement. Develop the frameworks and modules of the system.</li>
+                <li><span class="bold">Accomplishments</span>: Learned new Microsoft technologies and frameworks. Improved teamwork and communication skills.</li>
+                <li><span class="bold">Technologies</span>: Front-end: ReactJS + Redux, Webpack. Back-end: Ruby, Rails Framework.</li>
+              </ul>
             </div>
-          </div><!-- End .module #5 -->
-
-          <div class="module">
-            <h3 class="module__title">Senior Artist & Director</h3>
-            <div class="module__meta">
-              <span><i class="fa fa-building-o"></i>Google Inc USA</span>
-              <span><i class="fa fa-calendar"></i>20 Sep 2010-Current</span>
-            </div>
-            <div class="module__content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-          </div><!-- End .module #6 -->
-        </div><!-- End .section__content -->
-      </div><!-- End .section #1 -->
+          </div>
+        </div>
+      </div>
 
       <div class="section">
         <h2 class="section__title">
-          <i class="fa fa-briefcase circle circle--large"></i>
-          <span>Work Experience</span>
+          <i class="fa fa-graduation-cap circle circle--large"></i>
+          <span>Education</span>
         </h2>
         <div class="section__content">
           <div class="module">
-            <h3 class="module__title">Creative Designer</h3>
+            <h3 class="module__title">Hanoi University of Science and Technology</h3>
             <div class="module__meta">
-              <span><i class="fa fa-building-o"></i>Google Inc USA</span>
-              <span><i class="fa fa-calendar"></i>20 Sep 2010-Current</span>
+              <span><i class="fa fa-building-o"></i>Hanoi, Vietnam</span>
+              <span><i class="fa fa-calendar"></i>11/01/2016 - Present</span>
             </div>
             <div class="module__content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <ul>
+                <li>Information Technology, School of Information and Communication Technology</li>
+                <li><span>Degree classification</span>: Good</li>
+              </ul>
             </div>
-          </div><!-- End .module #7 -->
-
+          </div>
+        </div>
+        <div class="section__content">
           <div class="module">
-            <h3 class="module__title">Android Developer</h3>
+            <h3 class="module__title">Posts and Telecommunications Institute of Technology</h3>
             <div class="module__meta">
-              <span><i class="fa fa-building-o"></i>Google Inc USA</span>
-              <span><i class="fa fa-calendar"></i>20 Sep 2010-Current</span>
+              <span><i class="fa fa-building-o"></i>Danang, Vietnam</span>
+              <span><i class="fa fa-calendar"></i>09/2012 - 10/2015</span>
             </div>
             <div class="module__content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <ul>
+                <li>Information Technology (Software Application)</li
+                <li><span>Degree classification</span>: Good</li>
+                <li><span></span></li>
+
+              </ul>
             </div>
-          </div><!-- End .module #8 -->
-        </div><!-- End .section__content -->
-      </div><!-- End .section #2 -->
+          </div>
+        </div>
+      </div>
 
       <div class="section">
         <h2 class="section__title">
-          <i class="fa fa-briefcase circle circle--large"></i>
-          <span>Work Experience</span>
+          <i class="fa fa-language circle circle--large"></i>
+          <span>Languages</span>
         </h2>
         <div class="section__content">
           <div class="lang flex">
             <div class="lang__content">
-              <img src="assets/img/english.png" width="133" height="89" alt="English" />
+              <img src="assets/img/vietnam.png" width="80" height="80" alt="Vietnamese" />
+              <h4>Vietnamese</h4>
+              <div class="star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+            </div>
+            <div class="lang__content">
+              <img src="assets/img/english.png" width="80" height="80" alt="English" />
               <h4>English</h4>
               <div class="star">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
               </div>
             </div>
             <div class="lang__content">
-              <img src="assets/img/bangali.png" width="133" height="89" alt="Bangali" />
-              <h4>Bangali</h4>
+              <img src="assets/img/japan.png" width="80" height="80" alt="Japanese" />
+              <h4>Japanese</h4>
               <div class="star">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-              </div>
-            </div>
-            <div class="lang__content">
-              <img src="assets/img/germany.png" width="133" height="89" alt="Germany" />
-              <h4>Germany</h4>
-              <div class="star">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
               </div>
             </div>
           </div>
-        </div><!-- End .section__content -->
-      </div><!-- End .section #3 -->
-    </div><!-- End .content -->
-  </div><!-- End .wrapper -->
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
